# AHITL-protocol

./: LICENSE  README.md  spec.md  start.sh
ahitl/: .gitignore
ahitl/agent/: agent.py
ahitl/src/app/: page.tsx
dgui/: package.json
dgui/agent/: agent.py  pyproject.toml
dgui/src/app/: page.tsx
